--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,6 +1,5 @@
 name: Run tests
 
-# Run this workflow whenever something new is pushed.
 on: push
 jobs:
   run-tests:
@@ -10,10 +9,31 @@ jobs:
         uses: actions/checkout@v2
       - name: Setup Python
         uses: actions/setup-python@v2
-        # Specify some input for this particular action
         with:
           python-version: '3.8.6'
       - name: Install Dependencies
         run: pip install -r requirements.txt
       - name: Run tests
         run: pytest
+
+      - if: ${{ success() }}
+        name: copy file via ssh password
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          source: "."
+          target: "/var/www/test2"
+      - if: ${{ success() }}
+        name: executing a remote command
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script: | 
+            cd /var/www/test2/
+            ls -l  
